manifests/overlays/recomsys/patches/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bench-gateway
  namespace: bench
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - bench.dev01.footprint-ai.com # This should match a DNS name in the Certificate
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - bench.dev01.footprint-ai.com # This should match a DNS name in the Certificate
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: bench-ingress-cert # This should match the Certificate secretName
