manifests/overlays/recomsys/patches/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
  namespace: bench
spec:
  gateways:
  - bench/bench-gateway
  hosts:
  - bench.dev01.footprint-ai.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: 
        port:
          number: 8080
